# btc-tx-stats

./: .gitignore  Cargo.toml  Dockerfile.app  Dockerfile.diesel  Dockerfile.rust  README.md  compose.yaml  diesel.toml  justfile
migrations/2023-05-01-000001_initial_schema/: down.sql  up.sql
scripts/: ensure_db_ready.sh  entrypoint.sh
src/: bitcoin_client.rs  db.rs  main.rs  processor.rs
src/db/: models.rs  schema.rs
